--- a/.github/workflows/replace.yml
+++ b/.github/workflows/replace.yml
@@ -10,8 +10,8 @@ jobs:
       - name: Find and Replace
         uses: jacobtomlinson/gha-find-replace@master
         with:
-          find: 'eor(ult,'
-          replace: 'ult.eor('
+          find: 'eor(event,'
+          replace: 'event.eor('
           regex: false
           exclude: .github/**
       - uses: stefanzweifel/git-auto-commit-action@v4
