--- a/.github/workflows/replacer.yml
+++ b/.github/workflows/replacer.yml
@@ -10,8 +10,8 @@ jobs:
       - name: Find and Replace
         uses: jacobtomlinson/gha-find-replace@master
         with:
-          find: 'udB.get('
-          replace: 'udB.get_key('
+          find: 'udB.delete('
+          replace: 'udB.del_key('
           regex: false
           exclude: .github/**
       - uses: stefanzweifel/git-auto-commit-action@v4
